--- a/src/index.jade
+++ b/src/index.jade
@@ -109,10 +109,12 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/services/container_actions.js")
     script(src="js/services/images.js")
     script(src="js/services/image_actions.js")
+    script(src="js/services/system.js")
     script(src="js/modules/site/site.js")
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
     script(src="js/modules/images/images.js")
+    script(src="js/modules/system/system.js")
     script(src="js/modules/canvas/canvas.js")
     // endbuild
 
