--- a/src/js/modules/canvas/views/canvas.tpl.jade
+++ b/src/js/modules/canvas/views/canvas.tpl.jade
@@ -1,11 +1,13 @@
 div(layout="column" layout-fill class="images canvas" ng-controller="CanvasCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(role="list")
+    md-list(md-theme="blue" role="list")
       md-item
-        md-button(ng-click="addNode()" md-theme="blue" aria-label="Add Component" title="Add Component")
+        md-button(ng-click="addNode()" aria-label="Add Component")
+          md-tooltip Add Component
           div.icon.svg-ic_add_24px
       md-item
-        md-button(ng-disabled="true" md-theme="blue" aria-label="Remove Component" title="Remove Component")
+        md-button(aria-label="Remove Component")
+          md-tooltip Remove Component
           div.icon.svg-ic_clear_24px
 
   md-content(layout="column" style="margin-top: 16px;" flex)
