--- a/src/js/modules/containers/views/container.tpl.jade
+++ b/src/js/modules/containers/views/container.tpl.jade
@@ -1,18 +1,22 @@
 div(layout="column" layout-fill class="images" ng-controller="ContainerCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(role="list")
+    md-list(md-theme="blue" role="list")
       md-item
-        md-button(md-theme="blue" aria-label="Running" ng-click="toggleRunning($event)")
+        md-button(aria-label="Running" ng-click="toggleRunning($event)")
           md-tooltip {{ container.State.Running ? 'Stop' : 'Start' }}
           div.icon(ng-class="container.State.Running ? 'svg-ic_stop_24px': 'svg-ic_play_arrow_24px'")
       md-item
-        md-button(md-theme="blue" aria-label="Paused" ng-click="togglePaused($event)")
+        md-button(aria-label="Paused" ng-click="togglePaused($event)")
           md-tooltip {{ container.State.Paused ? 'UnPause' : 'Pause' }}
           div.icon(ng-class="container.State.Paused ? 'svg-ic_play_circle_outline_24px': 'svg-ic_pause_circle_outline_24px'")
       md-item
-        md-button(md-theme="blue" aria-label="Remove" ng-click="destory($event)")
+        md-button(aria-label="Remove" ng-click="destory($event)")
           md-tooltip Remove
           div.icon.svg-ic_clear_24px
+      md-item
+        md-button(aria-label="Logs")
+          md-tooltip Logs
+          a.icon.svg-ic_history_24px(ng-href="#/containers/{{containerShortId}}/logs" layout)
 
   md-content(style="margin-top: 16px;")
     table(layout="column" style="padding: 8px; text-align: left; width: 100%; display: table;")
