--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -1,24 +1,24 @@
 div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" role="list" md-theme="blue")
+    md-list(layout="row" md-theme="blue" role="list")
       md-item(flex=10 layout-align="center center" layout="column")
-        md-item-content(layout-align="center center")
+        md-item-content
           md-tooltip All
           md-switch(ng-model="queryParams.all" aria-label="All")
       md-item(flex=10 layout-align="center center" layout="column")
-        md-item-content(layout-align="center center")
+        md-item-content
           md-tooltip Size
           md-switch(ng-model="queryParams.size" aria-label="Size")
       md-item(flex=20 layout-align="center center" layout="column")
-        md-item-content(layout-align="center center")
+        md-item-content
           md-tooltip Since
           md-text-float(label="Since" ng-model="queryParams.since")
       md-item(flex=20 layout-align="center center" layout="column")
-        md-item-content(layout-align="center center")
+        md-item-content
           md-tooltip Before
           md-text-float(label="Before" ng-model="queryParams.before")
       md-item(flex=20 layout-align="center center" layout="column")
-        md-item-content(layout-align="center center")
+        md-item-content
           md-tooltip Limit
           md-text-float(label="Limit" ng-model="queryParams.limit")
       md-item(style="position: absolute; right: 0;")
