--- a/src/js/modules/images/views/images.tpl.jade
+++ b/src/js/modules/images/views/images.tpl.jade
@@ -8,7 +8,7 @@ div(layout="column" layout-fill class="images" ng-controller="ImagesCtrl" flex)
       md-item(flex=10 layout-align="center center" layout="column")
         md-item-content(layout-align="center center")
           md-tooltip Filters
-          md-text-float(label="Filters" ng-model="queryParams.filters")
+          md-text-float(label="Filters" ng-model="queryParamsFilters")
       md-item(style="position: absolute; right: 0;")
         md-item-content
           md-tooltip Search
