tag an image into repo

--- a/src/js/modules/containers/views/container.tpl.jade
+++ b/src/js/modules/containers/views/container.tpl.jade
@@ -15,7 +15,7 @@ div(layout="column" layout-fill class="images" ng-controller="ContainerCtrl" fle
         md-item-content
           md-button(aria-label="Remove" ng-click="destory($event)")
             md-tooltip Remove
-            div.icon.svg-ic_clear_24px
+            div.icon.svg-ic_delete_24px
       md-item
         md-item-content
           md-button(aria-label="Logs")
