--- a/src/js/modules/images/views/image.tpl.jade
+++ b/src/js/modules/images/views/image.tpl.jade
@@ -1,18 +1,26 @@
 div(layout="column" layout-fill class="images" ng-controller="ImageCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(md-theme="blue" role="list")
+    md-list(layout="row" md-theme="blue" role="list")
       md-item
-        md-button(aria-label="Add Container")
-          md-tooltip Add Container
-          div.icon.svg-ic_add_24px
+        md-item-content
+          md-button(aria-label="Add Container")
+            md-tooltip Add Container
+            div.icon.svg-ic_add_24px
       md-item
-        md-button(aria-label="Remove Image" ng-click="destory($event)")
-          md-tooltip Remove Image
-          div.icon.svg-ic_clear_24px
+        md-item-content
+          md-button(aria-label="Remove Image" ng-click="destory($event)")
+            md-tooltip Remove
+            div.icon.svg-ic_delete_24px
       md-item
-        md-button(aria-label="History")
-          md-tooltip Image History
-          a.icon.svg-ic_history_24px(ng-href="#/images/{{imageShortId}}/history" layout)
+        md-item-content
+          md-button(aria-label="Tag Image" ng-click="tag($event)")
+            md-tooltip Tag
+            div.icon.svg-ic_bookmark_24px
+      md-item
+        md-item-content
+          md-button(aria-label="History")
+            md-tooltip Image History
+            a.icon.svg-ic_history_24px(ng-href="#/images/{{imageShortId}}/history" layout)
 
   md-content(style="margin-top: 16px;")
     table(layout="column" style="padding: 8px; text-align: left; width: 100%; display: table;")
