host ping action

--- a/src/index.jade
+++ b/src/index.jade
@@ -118,6 +118,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/services/image_actions.js")
     script(src="js/services/system.js")
     script(src="js/services/hosts.js")
+    script(src="js/services/host_actions.js")
     script(src="js/modules/site/site.js")
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
