add file svg icons

--- a/src/index.jade
+++ b/src/index.jade
@@ -30,6 +30,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-content.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-action.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-av.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-file.css")
     // endbuild
 
     // build:css css/dockerboard-app.css
