--- a/src/index.jade
+++ b/src/index.jade
@@ -31,6 +31,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-action.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-av.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-file.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-toggle.css")
     // endbuild
 
     // build:css css/dockerboard-app.css
@@ -126,6 +127,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/modules/images/images.js")
     script(src="js/modules/system/system.js")
     script(src="js/modules/hosts/hosts.js")
+    script(src="js/modules/hub/hub.js")
     script(src="js/modules/canvas/canvas.js")
     // endbuild
 
