update theme style

--- a/src/js/modules/containers/views/container.destory.dialog.tpl.jade
+++ b/src/js/modules/containers/views/container.destory.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.container-dialog(aria-label="Remove Container")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader(class="md-sticky-no-effect") Remove Container {{ containerShortId }}
   md-content
     md-list
