--- a/src/js/modules/containers/views/container.running.dialog.tpl.jade
+++ b/src/js/modules/containers/views/container.running.dialog.tpl.jade
@@ -1,4 +1,4 @@
-md-dialog.container-dialog(aria-label="{action} + 'Container'" md-theme="blue")
+md-dialog.container-dialog(aria-label="{action} + 'Container'")
   md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect
       span.action {{action}} 
