--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -1,6 +1,6 @@
 div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" md-theme="blue" role="list")
+    md-list(layout="row" md-theme="default" role="list")
       md-item(flex=10 layout-align="center center" layout="column")
         md-item-content
           md-tooltip All
