--- a/src/js/modules/hosts/views/host.version.dialog.tpl.jade
+++ b/src/js/modules/hosts/views/host.version.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.host-dialog(aria-label="Docker Version")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect Docker Version
   md-content
     md-list
