--- a/src/js/modules/hosts/views/hosts.tpl.jade
+++ b/src/js/modules/hosts/views/hosts.tpl.jade
@@ -1,6 +1,6 @@
 div(layout="column" layout-fill class="images" ng-controller="HostsCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" role="list" md-theme="blue")
+    md-list(layout="row" role="list" md-theme="default")
       md-item
         md-button(aria-label="Add Host" ng-click="create($event)")
           md-tooltip Add Host
