--- a/src/js/modules/images/views/image.create.dialog.tpl.jade
+++ b/src/js/modules/images/views/image.create.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.container-dialog(aria-label="Create an image")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect
       span.action Create 
       | an Image
