--- a/src/js/modules/images/views/image.tpl.jade
+++ b/src/js/modules/images/views/image.tpl.jade
@@ -1,6 +1,6 @@
 div(layout="column" layout-fill class="images" ng-controller="ImageCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" md-theme="blue" role="list")
+    md-list(layout="row" md-theme="default" role="list")
       md-item
         md-item-content
           md-button(aria-label="Add Container")
