--- a/src/index.jade
+++ b/src/index.jade
@@ -37,13 +37,13 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel='stylesheet' href='css/svg-icons.css')
     // endbuild
 
-  body(md-theme="blue" layout="row" ng-controller="SidenavCtrl")
+  body(md-theme="default" layout="row" ng-controller="SidenavCtrl")
 
     md-sidenav(layout="column"
       class="md-sidenav-left md-whiteframe-z2"
       md-component-id="left"
       md-is-locked-open="$media('gt-sm')")
-      md-toolbar(md-theme="blue")
+      md-toolbar
         h1(class="md-toolbar-tools")
           a(href="" ng-click="goHome()") Dockerboard
       md-content(flex)
@@ -72,7 +72,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
           div © DockerBoard 2014
 
     div(layout="column" tabindex="-1" role="main" flex)
-      md-toolbar(layout="column" ng-click="openMenu()" class="md-blue-theme md-toolbar-tools" flex)
+      md-toolbar(layout="column" ng-click="openMenu()" class="md-default-theme md-toolbar-tools" flex)
         md-list(layout="row" layout-align="left center" flex)
           md-item(style="position: absolute; right: 26px;" hide-sm)
             md-item-content
