--- a/src/js/modules/canvas/views/canvas.tpl.jade
+++ b/src/js/modules/canvas/views/canvas.tpl.jade
@@ -1,6 +1,6 @@
 div(layout="column" layout-fill class="images canvas" ng-controller="CanvasCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(md-theme="blue" role="list")
+    md-list(md-theme="default" role="list")
       md-item
         md-button(ng-click="addNode()" aria-label="Add Component")
           md-tooltip Add Component
