--- a/src/js/modules/containers/views/container.paused.dialog.tpl.jade
+++ b/src/js/modules/containers/views/container.paused.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.container-dialog(aria-label="{{action}} Container")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect
       span.action {{action}} 
       | Container 
