--- a/src/js/modules/hosts/views/hosts.create.dialog.tpl.jade
+++ b/src/js/modules/hosts/views/hosts.create.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.host-dialog(aria-label="Add Host")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect
       span.action Add 
       | Host
