--- a/src/js/modules/hub/views/hub.tpl.jade
+++ b/src/js/modules/hub/views/hub.tpl.jade
@@ -1,6 +1,6 @@
 div(layout="column" layout-fill class="images" ng-controller="HubCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" role="list" md-theme="blue")
+    md-list(layout="row" role="list" md-theme="default")
       md-item(flex=25 layout-align="center center" layout="column")
         md-item-content(layout-align="center center")
           md-tooltip Term to search
