--- a/src/js/modules/images/views/image.tag.dialog.tpl.jade
+++ b/src/js/modules/images/views/image.tag.dialog.tpl.jade
@@ -1,5 +1,5 @@
 md-dialog.container-dialog(aria-label="Add Tag")
-  md-toolbar(layout="column" layout-align="center center" md-theme="blue")
+  md-toolbar(layout="column" layout-align="center center")
     md-subheader.md-sticky-no-effect
       span.action Tag 
       | Image 
