--- a/src/js/modules/images/views/images.tpl.jade
+++ b/src/js/modules/images/views/images.tpl.jade
@@ -1,10 +1,10 @@
 div(layout="column" layout-fill class="images" ng-controller="ImagesCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" role="list" md-theme="blue")
+    md-list(layout="row" role="list" md-theme="default")
       md-item(flex=10 layout-align="center center" layout="column")
         md-item-content(layout-align="center center")
           md-tooltip All
-          md-switch(md-theme="blue" ng-model="queryParams.all" aria-label="All")
+          md-switch(ng-model="queryParams.all" aria-label="All")
       md-item(flex=10 layout-align="center center" layout="column")
         md-item-content(layout-align="center center")
           md-tooltip Filters
