--- a/src/index.jade
+++ b/src/index.jade
@@ -32,7 +32,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-toggle.css")
     // endbuild
 
-    // build:css1 css/dockerboard-app.css
+    // build:css css/dockerboard-app.css
     link(rel='stylesheet' href='css/app.css')
     link(rel='stylesheet' href='css/svg-icons.css')
     // endbuild
@@ -111,7 +111,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js")
     // endbuild
 
-    // build:js1 js/dockerboard-app.js
+    // build:js js/dockerboard-app.js
     script(src='js/config.js')
     script(src='js/app.js')
     script(src="js/filters/filters.js")
