--- a/src/index.jade
+++ b/src/index.jade
@@ -94,11 +94,11 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="bower_components/angular-resource/angular-resource.js")
     script(src="bower_components/angular-ui-router/release/angular-ui-router.js")
     script(src="bower_components/angular-aria/angular-aria.js")
-    script(src="bower_components/angular-animate/angular-animate.js")
-    script(src="bower_components/hammerjs/hammer.js")
-    script(src="bower_components/angular-material/angular-material.js")
-    script(src="bower_components/lodash/dist/lodash.js")
     script(src="bower_components/d3/d3.js")
+    script(src="bower_components/lodash/lodash.js")
+    script(src="bower_components/hammerjs/hammer.js")
+    script(src="bower_components/angular-animate/angular-animate.js")
+    script(src="bower_components/angular-material/angular-material.js")
     script(src="bower_components/pretty-bytes/pretty-bytes.js")
     script(src="bower_components/angular-pretty-bytes/angular-pretty-bytes.js")
     script(src="bower_components/angular-loading-bar/build/loading-bar.js")
@@ -109,6 +109,8 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="bower_components/angular-translate-storage-cookie/angular-translate-storage-cookie.js")
     script(src="bower_components/angular-translate-storage-local/angular-translate-storage-local.js")
     script(src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js")
+    script(src="bower_components/sockjs-client/dist/sockjs.js")
+    script(src="bower_components/angular-sockjs/socket.js")
     // endbuild
 
     // build:js js/dockerboard-app.js
@@ -124,6 +126,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/services/system.js")
     script(src="js/services/hosts.js")
     script(src="js/services/host_actions.js")
+    script(src="js/services/sock.js")
     script(src="js/modules/site/site.js")
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
@@ -133,4 +136,3 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/modules/hub/hub.js")
     script(src="js/modules/canvas/canvas.js")
     // endbuild
-
