--- a/src/index.jade
+++ b/src/index.jade
@@ -42,7 +42,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     md-sidenav(layout="column"
       class="md-sidenav-left md-whiteframe-z2"
       md-component-id="left"
-      md-is-locked-open="$media('gt-sm')")
+      md-is-locked-open="$mdMedia('gt-sm')")
       md-toolbar
         h1(class="md-toolbar-tools")
           a(href="" ng-click="goHome()") Dockerboard
