--- a/src/js/modules/containers/views/container.logs.tpl.jade
+++ b/src/js/modules/containers/views/container.logs.tpl.jade
@@ -20,7 +20,9 @@ div(layout="column" layout-fill class="images" ng-controller="ContainerLogsCtrl"
       md-item(flex=20 layout-align="center center" layout="column")
         md-item-content
           md-tooltip Tail, all or number
-          md-text-float(label="Tail" ng-model="queryParams.tail")
+          md-input-container
+            label Tail
+            input(ng-model="queryParams.tail")
       md-item(style="position: absolute; right: 0;")
         md-item-content
           md-tooltip Search
